--- a/app/src/main/res/layout/control_login.xml
+++ b/app/src/main/res/layout/control_login.xml
@@ -14,10 +14,10 @@
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/editText" />
+        android:id="@+id/TxtUsuario" />
 
     <TextView
-        android:text="TextView"
+        android:text="Contraseña"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView2" />
@@ -25,9 +25,9 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText2" />
+        android:id="@+id/TxtPassword" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -36,15 +36,15 @@
         android:weightSum="1">
 
         <Button
-            android:text="Button"
+            android:text="Log in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button" />
+            android:id="@+id/BtnAceptar" />
 
         <TextView
             android:text="señal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView3" />
+            android:id="@+id/LblMensaje" />
     </LinearLayout>
 </LinearLayout>
